# dotfiles

./: .bashrc  .flake8  .gitignore  .markdownlintrc  .my_bashrc  .pre-commit-config.yaml  .rumdl.toml  .statix.toml  .stylua.toml  .wslconfig  AGENT.md  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE  Makefile  README.md  configuration.nix  dot.editorconfig  dot.gitignore  dot.zshenv  dot.zshrc  flake.nix  install.sh  mise.toml  pyproject.toml  renovate.json  requirements-dbt.txt  requirements-main.txt  requirements.dbt.txt  requirements.main.txt  requirements.mcp.txt  setup_wsl2.sh  statix.toml  user.nix.example
.claude/: CLAUDE.md  settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh  start-jupyter.sh
.github/: README.md  dependabot.yml
.i9wa4/: pr.md
.nvim/: init.vim
.vim/: .netrwhist  init.vim  vimrc
VSCode/: sample.json  work.code-workspace
agents/: AGENTS.md  CLAUDE.md
config/agents/skills/python/examples/: pyproject.toml
darwin/: configuration.nix
docs/: agent-command-approval-design.md  agent-config-philosophy.md  agent-execution-layer-smoke-test.md  agent-hooks-architecture.md  agent-skill-management.md  agent-skill-trigger-validation.md  agent-skills-management.md  agent-skills-release-all.md  claude-containment-agent-harness-evaluation.md  clipboard-strategy.md  codex-auto-review-local-boundaries.md  codex-guardian-policy-template-evaluation.md  deny-bash-design.md  dotfiles-operating-concepts.md  english-to-japanese-technical-translation.md  external-claude-guidance-evaluation.md  microsandbox-nix-msb-managed-agents-evaluation.md  missing-tools-workflow-evaluation.md  postman-runtime-contract-reduction.md  repo-ai-operating-contract.md  repo-ai-review-boundaries.md  storage-hygiene.md  tmux-a2a-postman-ai-contract.md  tmux-a2a-postman-concepts.md  worktree-development-overview.md  worktree-development.md  worktree-tool-evaluation.md  zizmor-sarif-code-scanning-evaluation.md
dot.vim/: .netrwhist  dot.vim  local_sample.vim  vimrc
dot.vscode/: home.code-workspace  settings.json
etc/: .bashrc  .profile  dot.bashrc  dot.profile  dot.wslconfig  dot.zshenv  dot.zshrc  ghq-list-all.txt  ghq-list-essential.txt  ghq-list-private.txt  ghq-list-readonly.txt  helloworld.sh  markdown_style.css  py_venv_myenv_requirements.txt  requirements-venv-dbtenv.txt  requirements-venv-myenv.txt  s.sql
home/: home.nix
nix/: codex.nix  darwin.nix  editorconfig.nix  ghq-list-essential.txt  git.nix  home.nix  pre-commit.nix  treefmt.nix  vscode.nix
scripts/: check-external-issue-mention.sh
skills/: classification.yaml  trigger-validation.json
(+1872 files in other folders)
