[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
  "numpy",
  "pandas",
  "pynvim",
  "python-dotenv",
  "python-lsp-server[all]",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "shandy-sqlfmt[jinjafmt]",
  "sqlfluff",
]

confluence = [
  "requests",
  "beautifulsoup4",
  "html2text",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
]
ignore = [
    "E203",  # Whitespace before ':'
    "E701",  # Multiple statements on one line (colon)
    "F821",  # undefined name (Databricks-specific module)
]
