[project]
name = "dotfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
  "numpy",
  "pandas",
  "pynvim",
  "python-dotenv",
  "python-lsp-server[all]",
]

[dependency-groups]
dev = [
  "jupyterlab",
  # NOTE: pre-commit is now managed by git-hooks.nix (no Swift dependency)
  "ruff",
  "shandy-sqlfmt[jinjafmt]",
  "sqlfluff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
]
ignore = [
    "F821",  # undefined name (Databricks-specific module)
]
